<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activitys.GetStartedActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_get_started" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/text_learn_online"
        android:textSize="@dimen/sp_48" />

    <TextView
        android:id="@+id/textSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/text_slogan"
        android:textSize="@dimen/sp_18" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStartNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/background_radius"
        android:backgroundTint="@color/material_500"
        android:text="@string/text_start_now"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressStarted"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_32"
        android:indeterminate="true"
        android:progressTint="@color/material_500"/>

</LinearLayout>
