<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient_blue"
            tools:context=".fragments.ProfileFragment">

            <TextView
                android:id="@+id/textProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_32"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Jessica Shmitz" />

            <TextView
                android:id="@+id/textProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/viewBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textProfileName"
                tools:text="puchasenow@gmail.com" />

            <View
                android:id="@+id/viewBackground"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_8"
                android:background="@drawable/boder_layout01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textProfileEmail" />

            <TextView
                android:id="@+id/textAchievements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/text_achievements"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewBackground" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="@dimen/dp_24"
                android:background="@drawable/boder_view01"
                android:elevation="@dimen/dp_10"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/imageAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageAvatar"
                app:layout_constraintTop_toTopOf="@id/imageAvatar">

                <TextView
                    android:id="@+id/textRank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="@string/text_no_rank"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/three_space"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/text_zero"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/dp_16"
                android:layout_marginStart="@dimen/dp_24"
                android:background="@drawable/boder_view02"
                android:contentDescription="@null"
                android:elevation="@dimen/dp_10"
                app:layout_constraintBottom_toTopOf="@id/tabLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textAchievements" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageAvatar"
                app:tabGravity="fill"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed" />

            <FrameLayout
                android:id="@+id/viewPager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/dp_16"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="@id/viewBackground"
                app:layout_constraintEnd_toEndOf="@id/viewBackground"
                app:layout_constraintStart_toStartOf="@id/viewBackground"
                app:layout_constraintTop_toBottomOf="@id/tabLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>
